# chat_next_axum

./: .gitignore  README.md
chat_axum/: Cargo.toml
chat_axum/migrations/: 20250104103508_create_users_table.sql
chat_axum/src/: auth.rs  chat.rs  cors.rs  main.rs
chat_next/: package.json  pnpm-lock.yaml
chat_next/src/app/: layout.tsx  page.tsx
chat_next/src/app/chat/: page.tsx
chat_next/src/app/login/: page.tsx
chat_next/src/app/register/: page.tsx
chat_next/src/components/: ChatRoom.tsx  LoginForm.tsx  OtherMessage.tsx  RegisterForm.tsx  ToastTitles.tsx  UserMessage.tsx
chat_next/src/lib/: auth.ts  auth_error_handlers.ts
