[package]
name = "chat_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version= "0.8.0", features = ["ws"] }
futures = "0.3"
serde = "1.0.217"
serde_json = "1.0.134"
thiserror = "2.0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1.11.0"
